trunk/Archive2/d0/53b2cfd46e3be3/output
main.cpp:21:9: error: 'dont_touch' is a private member of 'shy'
    obj.dont_touch = 42;
        ^
main.cpp:4:9: note: declared private here
    int dont_touch;
        ^
1 error generated.
